--- a/StationProject/Components/Account/Pages/ConfirmEmailChange.razor
+++ b/StationProject/Components/Account/Pages/ConfirmEmailChange.razor
@@ -4,6 +4,7 @@
 @using Microsoft.AspNetCore.Identity
 @using Microsoft.AspNetCore.WebUtilities
 @using StationProject.Data
+@using StationProject.Data.Models
 
 @inject UserManager<ApplicationUser> UserManager
 @inject SignInManager<ApplicationUser> SignInManager
