--- a/StationProject/Components/Account/Pages/Login.razor
+++ b/StationProject/Components/Account/Pages/Login.razor
@@ -4,6 +4,7 @@
 @using Microsoft.AspNetCore.Authentication
 @using Microsoft.AspNetCore.Identity
 @using StationProject.Data
+@using StationProject.Data.Models
 
 @inject SignInManager<ApplicationUser> SignInManager
 @inject ILogger<Login> Logger
