--- a/StationProject/Components/Account/Pages/LoginWith2fa.razor
+++ b/StationProject/Components/Account/Pages/LoginWith2fa.razor
@@ -3,6 +3,7 @@
 @using System.ComponentModel.DataAnnotations
 @using Microsoft.AspNetCore.Identity
 @using StationProject.Data
+@using StationProject.Data.Models
 
 @inject SignInManager<ApplicationUser> SignInManager
 @inject UserManager<ApplicationUser> UserManager
