--- a/StationProject/Components/Account/Pages/Manage/Disable2fa.razor
+++ b/StationProject/Components/Account/Pages/Manage/Disable2fa.razor
@@ -2,6 +2,7 @@
 
 @using Microsoft.AspNetCore.Identity
 @using StationProject.Data
+@using StationProject.Data.Models
 
 @inject UserManager<ApplicationUser> UserManager
 @inject IdentityUserAccessor UserAccessor
