--- a/StationProject/Components/Account/Pages/Manage/EnableAuthenticator.razor
+++ b/StationProject/Components/Account/Pages/Manage/EnableAuthenticator.razor
@@ -6,6 +6,7 @@
 @using System.Text.Encodings.Web
 @using Microsoft.AspNetCore.Identity
 @using StationProject.Data
+@using StationProject.Data.Models
 
 @inject UserManager<ApplicationUser> UserManager
 @inject IdentityUserAccessor UserAccessor
