--- a/StationProject/Components/Account/Pages/Manage/ExternalLogins.razor
+++ b/StationProject/Components/Account/Pages/Manage/ExternalLogins.razor
@@ -3,6 +3,7 @@
 @using Microsoft.AspNetCore.Authentication
 @using Microsoft.AspNetCore.Identity
 @using StationProject.Data
+@using StationProject.Data.Models
 
 @inject UserManager<ApplicationUser> UserManager
 @inject SignInManager<ApplicationUser> SignInManager
