--- a/StationProject/Components/Account/Pages/ResetPassword.razor
+++ b/StationProject/Components/Account/Pages/ResetPassword.razor
@@ -5,6 +5,7 @@
 @using Microsoft.AspNetCore.Identity
 @using Microsoft.AspNetCore.WebUtilities
 @using StationProject.Data
+@using StationProject.Data.Models
 
 @inject IdentityRedirectManager RedirectManager
 @inject UserManager<ApplicationUser> UserManager
