--- a/StationProject/Components/Account/Shared/ExternalLoginPicker.razor
+++ b/StationProject/Components/Account/Shared/ExternalLoginPicker.razor
@@ -1,6 +1,7 @@
 ﻿@using Microsoft.AspNetCore.Authentication
 @using Microsoft.AspNetCore.Identity
 @using StationProject.Data
+@using StationProject.Data.Models
 
 @inject SignInManager<ApplicationUser> SignInManager
 @inject IdentityRedirectManager RedirectManager
