--- a/StationProject/Components/Account/Shared/ManageNavMenu.razor
+++ b/StationProject/Components/Account/Shared/ManageNavMenu.razor
@@ -1,5 +1,6 @@
 ﻿@using Microsoft.AspNetCore.Identity
 @using StationProject.Data
+@using StationProject.Data.Models
 
 @inject SignInManager<ApplicationUser> SignInManager
 
