--- a/StationProject/Components/App.razor
+++ b/StationProject/Components/App.razor
@@ -6,9 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <base href="/"/>
     <link rel="stylesheet" href="bootstrap/bootstrap.min.css"/>
-    <link rel="stylesheet" href="app.css"/>
-    <link rel="stylesheet" href="StationProject.styles.css"/>
+    <link rel="stylesheet" href="app.css?v=@DateTime.Now"/>
+    <link rel="stylesheet" href="StationProject.styles.css?v=@DateTime.Now"/>
     <link rel="icon" type="image/png" href="favicon.png"/>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=menu" />
     <HeadOutlet/>
 </head>
 
