--- a/StationProject/Components/UI/HeaderCustom.razor
+++ b/StationProject/Components/UI/HeaderCustom.razor
@@ -1,26 +1,64 @@
+@rendermode InteractiveServer
+
 @namespace StationProject.Components.UI
 
-<div style="padding: 30px 60px; background: #E8ECF2; display: flex; align-items: center; justify-content: space-between;">
-    <div style="display: flex; flex-direction: row; vertical-align: bottom">
-        <span style="font-size: 40px; letter-spacing: 2px; color: #052C3D; line-height: 0.80em;">HeaderCustom</span>
-        <AuthorizeView Roles="Admin">
-            <span style="padding-left: 4px; font-size: 20px; letter-spacing: -1px; color: #052C3D; line-height: 0.95em; margin-top: auto">Admin</span>
-        </AuthorizeView>
-    </div>
+<RadzenStack Style="padding: 30px 60px; background: #E8ECF2;"
+             Orientation="Orientation.Horizontal"
+             AlignItems="AlignItems.Center"
+             Wrap="FlexWrap.Wrap"
+             JustifyContent="JustifyContent.SpaceBetween">
 
-    <div style="display: flex; flex-direction: row; align-items: center; gap: 20px">
-        <NavLink class="nav-tab" href="cart">
-            <div class="nav-item" style="display: flex; align-items: center; color: #052C3D;">
+    <NavLink href="/">
+        <span class="site-header">HeaderCustom</span>
+
+        <AuthorizeView Roles="Joe">
+            <span class="sub-header">Joe</span>
+        </AuthorizeView>
+        <AuthorizeView Roles="Vendor">
+            <span class="sub-header">Vendor</span>
+        </AuthorizeView>
+        <AuthorizeView Roles="Admin">
+            <span class="sub-header">Admin</span>
+        </AuthorizeView>
+    </NavLink>
+
+    <RadzenStack
+        Orientation="Orientation.Horizontal"
+        AlignItems="AlignItems.Center"
+        Wrap="FlexWrap.Wrap"
+        Gap="20px">
+
+        <NavLink class="nav-tab" href="Cart">
+            <div class="f-nav-item">
                 <img src="images/shopping_bag_24dp.svg" alt="cart" style="width: 36px;"/>
-                <span style="font-size: 20px">Cart</span>
+                <span>Cart</span>
             </div>
         </NavLink>
-        
-        <NavLink class="nav-item nav-tab" href="profile">
-            <div class="nav-item" style="display: flex; align-items: center; color: #052C3D;">
-                <img src="images/person_24dp.svg" alt="profile" style="width: 36px;"/>
-                <span style="font-size: 20px">Profile</span>
-            </div>
-        </NavLink>
-    </div>
-</div>
+
+        <AuthorizeView>
+            <Authorized>
+                <NavLink class="nav-tab" href="Profile">
+                    <div class="f-nav-item">
+                        <img src="images/person_24dp.svg" alt="profile"/>
+                        <span>Profile</span>
+                    </div>
+                </NavLink>
+            </Authorized>
+
+            <NotAuthorized>
+                <NavLink class="nav-tab" href="Account/Login">
+                    <div class="f-nav-item">
+                        <RadzenImage Path="images/person_24dp.svg" AlternateText="Login"/>
+                        <span>Login</span>
+                    </div>
+                </NavLink>
+                <NavLink class="nav-tab" href="Account/Register">
+                    <div class="f-nav-item">
+                        <RadzenImage Path="images/person_24dp.svg" AlternateText="Register"/>
+                        <span>Register</span>
+                    </div>
+                </NavLink>
+            </NotAuthorized>
+        </AuthorizeView>
+    </RadzenStack>
+</RadzenStack>
