--- a/StationProject/Components/App.razor
+++ b/StationProject/Components/App.razor
@@ -10,12 +10,14 @@
     <link rel="stylesheet" href="StationProject.styles.css?v=@DateTime.Now"/>
     <link rel="icon" type="image/png" href="favicon.png"/>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=menu" />
+    <RadzenTheme Theme="material" @rendermode="InteractiveServer" />
     <HeadOutlet/>
 </head>
 
 <body>
 <Routes/>
 <script src="_framework/blazor.web.js"></script>
+<script src="_content/Radzen.Blazor/Radzen.Blazor.js?v=@(typeof(Radzen.Colors).Assembly.GetName().Version)"></script>
 </body>
 
 </html>
