--- a/StationProject/Components/Layout/MainLayout.razor
+++ b/StationProject/Components/Layout/MainLayout.razor
@@ -1,6 +1,8 @@
 ﻿@using StationProject.Components.UI
 @inherits LayoutComponentBase
 
+<RadzenComponents @rendermode="InteractiveServer" />
+
 <div class="page">
     <div class="sidebar">
         <NavMenu/>
