--- a/StationProject/Components/Pages/CatalogPage.razor.css
+++ b/StationProject/Components/Pages/CatalogPage.razor.css
@@ -1,36 +1,4 @@
-.row {
-    display: flex;
-    flex-direction: row;
-}
 
-.column {
-    display: flex;
-    flex-direction: column;
-}
-
-.space-between {
-    justify-content: space-between;
-}
-
-.gap-20 {
-    gap: 20px;
-}
-
-.gap-10 {
-    gap: 10px;
-}
-
-.gap-6 {
-    gap: 6px;
-}
-
-.gap-4 {
-    gap: 4px;
-}
-
-.m-10 {
-    margin: 10px;
-}
 
 .footer * {
     color: #052c3d;
@@ -41,7 +9,7 @@
     font-size: 24px;
 }
 
-.footer-link-important {
+a.footer-link-important {
     font-size: 20px;
     font-weight: bold;
     text-decoration: none;
@@ -111,4 +79,21 @@
 
 .primary:active {
     background-color: #2f55a6;
+}
+
+.name-focusing-outlined {
+    color: #8FA5AE; font-size: 15px
+}
+
+.focusing-outlined {
+    border: 1px solid #8FA5AE;
+    border-radius: 8px; 
+    transition: border-color 0.3s;
+    font-size: 20px;
+    padding: 10px;
+    vertical-align: center;
+}
+
+.focusing-outlined:focus {
+    border-color: #3973E1; 
 }
