--- a/StationProject/wwwroot/app.css
+++ b/StationProject/wwwroot/app.css
@@ -109,3 +109,59 @@ h1:focus {
 .m-10 {
     margin: 10px;
 }
+
+.outlined {
+    color: #3973e1;
+    border: #3973e1 solid 1px; /* Initial border color */
+    border-radius: 8px;
+    text-align: center;
+    font-size: 20px;
+    padding: 10px 10px;
+    cursor: pointer;
+    text-decoration: none;
+    background-color: transparent;
+    transition: border-color 0.1s ease, background-color 0.1s ease;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    -o-user-select: none;
+    user-select: none;
+}
+
+.outlined:hover {
+    background-color: #e8ecf2;
+    border-color: #3060bb;
+}
+
+.outlined:active {
+    background-color: #cdcfd6;
+    border-color: #3060bb;
+}
+
+.primary {
+    background-color: #3973e1; /* Initial background color */
+    border-radius: 8px;
+    font-size: 20px;
+    text-align: center;
+    color: #e4e9f1;
+    padding: 10px 10px;
+    cursor: pointer;
+    text-decoration: none;
+    display: inline-block; /* Change to inline-block */
+    transition: background-color 0.1s ease; /* Smooth transition for background and border */
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    -o-user-select: none;
+    user-select: none;
+}
+
+.primary:hover {
+    background-color: #3060bb;
+}
+
+.primary:active {
+    background-color: #2f55a6;
+}
